--- a/WpfApplication1/MainWindowResources.xaml
+++ b/WpfApplication1/MainWindowResources.xaml
@@ -1,14 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:vm="clr-namespace:WpfApplication1.ViewModel" 
-                    xmlns:vw="clr-namespace:WpfApplication1.View" >
+                    xmlns:vmCustomer="clr-namespace:WpfApplication1.ViewModel.Stammdaten.Customer"
+                    xmlns:vwCustomer="clr-namespace:WpfApplication1.View.Stammdaten.Customer">
     
     
-    <DataTemplate DataType="{x:Type vm:AllCustomersViewModel}" >
-        <vw:AllCustomersView />
+    <DataTemplate DataType="{x:Type vmCustomer:AllCustomersViewModel}" >
+        <vwCustomer:AllCustomersView />
     </DataTemplate>
-    <DataTemplate DataType="{x:Type vm:CustomerViewModel}" >
-        <vw:CustomersView />
+    <DataTemplate DataType="{x:Type vmCustomer:CustomerViewModel}" >
+        <vwCustomer:CustomersView />
     </DataTemplate>
     <!-- Template für die Befehle / Hyperlinks im Navigationsbereich -->
     <DataTemplate x:Key="CommandsTemplate" >
