--- a/WpfApplication1/View/Stammdaten/Customer/AllCustomersView.xaml
+++ b/WpfApplication1/View/Stammdaten/Customer/AllCustomersView.xaml
@@ -1,5 +1,5 @@
-﻿<UserControl 
-  x:Class="WpfApplication1.View.AllCustomersView"
+<UserControl 
+  x:Class="WpfApplication1.View.Stammdaten.Customer.AllCustomersView"
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
