--- a/WpfApplication1/View/Stammdaten/Customer/CustomersView.xaml
+++ b/WpfApplication1/View/Stammdaten/Customer/CustomersView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="WpfApplication1.View.CustomersView"
+<UserControl x:Class="WpfApplication1.View.Stammdaten.Customer.CustomersView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
