--- a/WpfApplication1/Guis/Stammdaten/Customer/CustomersView.xaml
+++ b/WpfApplication1/Guis/Stammdaten/Customer/CustomersView.xaml
@@ -1,9 +1,9 @@
-<UserControl x:Class="WpfApplication1.View.Stammdaten.Customer.CustomersView"
+<UserControl x:Class="WpfApplication1.Guis.Stammdaten.Customer.CustomersView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-xmlns:vw="clr-namespace:WpfApplication1.View"
+xmlns:vw="clr-namespace:WpfApplication1.Guis"
   HorizontalAlignment="Center"
   VerticalAlignment="Center"  
   Width="400"
