--- a/WpfApplication1/Guis/Stammdaten/Customer/CustomersView.xaml
+++ b/WpfApplication1/Guis/Stammdaten/Customer/CustomersView.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-xmlns:vw="clr-namespace:WpfApplication1.Guis"
+            xmlns:vw="clr-namespace:WpfApplication1.Guis.Stammdaten.Customer"
   HorizontalAlignment="Center"
   VerticalAlignment="Center"  
   Width="400"
