--- a/WpfApplication1/Guis/Stammdaten/Product/AllProductsView.xaml
+++ b/WpfApplication1/Guis/Stammdaten/Product/AllProductsView.xaml
@@ -4,8 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-            
-    </Grid>
+             d:DesignHeight="300" d:DesignWidth="300"
+             xmlns:local="clr-namespace:WpfApplication1.Guis.Stammdaten.Product">
+    <UserControl.DataContext>
+        <local:AllProductsView />
+    </UserControl.DataContext>
 </UserControl>
