--- a/WpfApplication1/MainWindowResources.xaml
+++ b/WpfApplication1/MainWindowResources.xaml
@@ -1,15 +1,21 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:vmCustomer="clr-namespace:WpfApplication1.ViewModel.Stammdaten.Customer"
-                    xmlns:Customer="clr-namespace:WpfApplication1.Guis.Stammdaten.Customer">
+                    xmlns:vmProduct="clr-namespace:WpfApplication1.ViewModel.Stammdaten.Product"
+                    xmlns:CustomerGui="clr-namespace:WpfApplication1.Guis.Stammdaten.Customer"
+                    xmlns:ProductGui="clr-namespace:WpfApplication1.Guis.Stammdaten.Product">
     
     
     <DataTemplate DataType="{x:Type vmCustomer:AllCustomersViewModel}" >
-        <Customer:AllCustomersView />
+        <CustomerGui:AllCustomersView />
     </DataTemplate>
     <DataTemplate DataType="{x:Type vmCustomer:CustomerViewModel}" >
-        <Customer:CustomersView />
+        <CustomerGui:CustomersView />
     </DataTemplate>
+    <DataTemplate DataType="{x:Type vmProduct:AllProductsViewModel}">
+        <ProductGui:AllProductsView />
+    </DataTemplate>
+                  
     <!-- Template für die Befehle / Hyperlinks im Navigationsbereich -->
     <DataTemplate x:Key="CommandsTemplate" >
         <ItemsControl ItemsSource="{Binding Path=Commands}">
