--- a/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="WpfApplication1.MainWindow"
+﻿<Window x:Class="FrontEnd.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="{Binding Path=DisplayName}" Height="350" Width="525"
         WindowStartupLocation="CenterScreen"
         FontFamily="Verdana"
-        xmlns:vm="clr-namespace:WpfApplication1.ViewModel"
-        xmlns:nav="clr-namespace:WpfApplication1.ViewModel.NavCommands">
+        xmlns:vm="clr-namespace:FrontEnd.ViewModel"
+        xmlns:nav="clr-namespace:FrontEnd.ViewModel.NavCommands">
         
    
     <Window.Resources>
