--- a/WpfApplication1/Guis/Security/Login.xaml
+++ b/WpfApplication1/Guis/Security/Login.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="WpfApplication1.Guis.Security.Login"
+﻿<UserControl x:Class="FrontEnd.Guis.Security.Login"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:secVm="clr-namespace:WpfApplication1.ViewModel.Security"
+             xmlns:secVm="clr-namespace:FrontEnd.ViewModel.Security"
              mc:Ignorable="d" >
     <UserControl.DataContext>
         <secVm:LoginViewModel />
