--- a/WpfApplication1/Guis/Stammdaten/Product/AllProductsView.xaml
+++ b/WpfApplication1/Guis/Stammdaten/Product/AllProductsView.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="WpfApplication1.Guis.Stammdaten.Product.AllProductsView"
+﻿<UserControl x:Class="FrontEnd.Guis.Stammdaten.Product.AllProductsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
-             xmlns:local="clr-namespace:WpfApplication1.ViewModel.Stammdaten.Product">
+             xmlns:local="clr-namespace:FrontEnd.ViewModel.Stammdaten.Product">
     <UserControl.DataContext>
         <local:AllProductsViewModel />
     </UserControl.DataContext>
