--- a/WpfApplication1/Guis/Stammdaten/User/AllUsersView.xaml
+++ b/WpfApplication1/Guis/Stammdaten/User/AllUsersView.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="WpfApplication1.Guis.Stammdaten.User.AllUsersView"
+﻿<UserControl x:Class="FrontEnd.Guis.Stammdaten.User.AllUsersView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
-             xmlns:AllUsers="clr-namespace:WpfApplication1.ViewModel.Stammdaten.User">
+             xmlns:AllUsers="clr-namespace:FrontEnd.ViewModel.Stammdaten.User">
     
     <UserControl.DataContext>
         <AllUsers:AllUsersViewModel />
