--- a/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1/MainWindow.xaml
@@ -1,11 +1,12 @@
-﻿<Window x:Class="FrontEnd.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="{Binding Path=DisplayName}" Height="350" Width="525"
+        xmlns:vm="clr-namespace:FrontEnd.ViewModel"
+        xmlns:nav="clr-namespace:FrontEnd.ViewModel.NavCommands" xmlns:FrontEnd_Guis_Security="clr-namespace:FrontEnd.Guis.Security" x:Class="FrontEnd.MainWindow"
+        Title="{Binding DisplayName}" Height="350" Width="525"
         WindowStartupLocation="CenterScreen"
         FontFamily="Verdana"
-        xmlns:vm="clr-namespace:FrontEnd.ViewModel"
-        xmlns:nav="clr-namespace:FrontEnd.ViewModel.NavCommands">
+        >
         
    
     <Window.Resources>
@@ -14,68 +15,67 @@
     <Window.DataContext>
         <vm:MainWindowViewModel />
     </Window.DataContext>
-    <DockPanel Visibility="{Binding DockVisibility}">
-        <DockPanel DockPanel.Dock="Top" KeyboardNavigation.TabNavigation="None" >
-            <Menu >
-                <MenuItem Header="_File">
-                    <MenuItem Header="_Close" Command="{Binding CloseApplication}"/>
-                </MenuItem>
-                <MenuItem Header="_Edit" />
-                <MenuItem Header="_Options" />
-                <MenuItem Header="_Help" />
-            </Menu>
-        </DockPanel>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="4" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-        </Grid>
-        <Border 
-        Grid.Column="0" 
-        Style="{StaticResource MainBorderStyle}"
-        Width="170" >
-            <HeaderedContentControl  Style="{StaticResource MainHCCStyle}" Header="Verzeichnis" >
-                <ItemsControl>
-                <ItemsControl  ItemsSource="{Binding Path=Commands}" >
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <TextBlock Margin="2,6">
-                                <Button Command="{Binding Path=Command}"/>
-                                <TextBlock Text="{Binding Path=DisplayName}" />
-                            </TextBlock>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
-                    <TreeView>
-                        <TreeView.DataContext>
-                            <nav:TreeViewCommands />
-                        </TreeView.DataContext>
-                        <TreeView.Resources>
-                            <DataTemplate x:Key="TreeViewItemTemplate" DataType="{x:Type vm:CommandViewModel}">
-                                <TextBlock Margin="2.1">
-                                            <Hyperlink Command="{Binding Path=Command}" >
-                                                    <TextBlock Text="{Binding Path=DisplayName}" />
-                                            </Hyperlink>
-                               </TextBlock>
-                            </DataTemplate>
-                        </TreeView.Resources>
-                         <TreeViewItem Header="Stammdaten">
-                            <TreeViewItem Header="Produkte" ItemTemplate="{StaticResource TreeViewItemTemplate}" ItemsSource="{Binding CommandsProducts}"  />
-                            <TreeViewItem Header="Kunden" ItemTemplate="{StaticResource TreeViewItemTemplate}" ItemsSource="{Binding CommandsCustomer}"  />
-                        </TreeViewItem>
-                    </TreeView>
-                </ItemsControl>
-            </HeaderedContentControl>
-        </Border>
+    <DockPanel>
+			<DockPanel DockPanel.Dock="Top" KeyboardNavigation.TabNavigation="None" >
+				<Menu >
+					<MenuItem Header="_File">
+						<MenuItem Header="_Close" Command="{Binding CloseApplication}"/>
+					</MenuItem>
+					<MenuItem Header="_Edit" />
+					<MenuItem Header="_Options" />
+					<MenuItem Header="_Help" />
+				</Menu>
+			</DockPanel>
+			<Grid>
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="Auto" />
+					<ColumnDefinition Width="4" />
+					<ColumnDefinition Width="*" />
+				</Grid.ColumnDefinitions>
+			</Grid>
+			<Border 
+				Grid.Column="0" 
+				Style="{StaticResource MainBorderStyle}"
+				Width="170" >
+				<HeaderedContentControl  Style="{StaticResource MainHCCStyle}" Header="Verzeichnis" >
+					<ItemsControl>
+						<ItemsControl  ItemsSource="{Binding Commands}" >
+							<ItemsControl.ItemTemplate>
+								<DataTemplate>
+									<TextBlock Margin="2,6"><InlineUIContainer>
+											<Button Command="{Binding Command}"/>
+										</InlineUIContainer><Run Text=" "/><InlineUIContainer>
+											<TextBlock Text="{Binding DisplayName}" />
+										</InlineUIContainer></TextBlock>
+								</DataTemplate>
+							</ItemsControl.ItemTemplate>
+						</ItemsControl>
+						<TreeView>
+							<TreeView.Resources>
+								<DataTemplate x:Key="TreeViewItemTemplate" DataType="{x:Type vm:CommandViewModel}">
+									<TextBlock Margin="2.1"><Hyperlink Command="{Binding Command}" ><InlineUIContainer>
+												<TextBlock Text="{Binding DisplayName}" />
+											</InlineUIContainer></Hyperlink></TextBlock>
+								</DataTemplate>
+							</TreeView.Resources>
+							<TreeView.DataContext>
+								<nav:TreeViewCommands />
+							</TreeView.DataContext>
+							<TreeViewItem Header="Stammdaten">
+								<TreeViewItem Header="Produkte" ItemTemplate="{StaticResource TreeViewItemTemplate}" ItemsSource="{Binding CommandsProducts}"  />
+								<TreeViewItem Header="Kunden" ItemTemplate="{StaticResource TreeViewItemTemplate}" ItemsSource="{Binding CommandsCustomer}"  />
+							</TreeViewItem>
+						</TreeView>
+					</ItemsControl>
+				</HeaderedContentControl>
+			</Border>
 
-        <Border Grid.Column="2"  Style="{StaticResource MainBorderStyle}" >
-         <HeaderedContentControl 
-          Content="{Binding Path=Workspaces}"
-          ContentTemplate="{StaticResource WorkspacesTemplate}"
-          Header="Workspaces"
-          Style="{StaticResource MainHCCStyle}"    />
-        </Border>
-    </DockPanel>
+			<Border Grid.Column="2"  Style="{StaticResource MainBorderStyle}" >
+				<HeaderedContentControl 
+					Content="{Binding Workspaces}"
+					ContentTemplate="{StaticResource WorkspacesTemplate}"
+					Header="Workspaces"
+					Style="{StaticResource MainHCCStyle}"    />
+			</Border>
+		</DockPanel>
 </Window>
