--- a/WpfApplication1/App.xaml
+++ b/WpfApplication1/App.xaml
@@ -1,7 +1,9 @@
 ﻿<Application x:Class="FrontEnd.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"         
-             StartupUri="Guis/Security/LoginWindow.xaml" >
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:Security="clr-namespace:WpfApplication1.Guis.Security" 
+             StartupUri="MainWindow.xaml" 
+             >
     <Application.Resources>
         <LinearGradientBrush x:Key="Brush_HeaderBackground" StartPoint="0.5,0" EndPoint="0.5,1">
             <GradientStop Color="#66000088" Offset="0" />
