Add GUI Supplier / Connect Logic (SupplierViewModel) with Gui (SupplierView)

--- a/Trunk/WpfApplication1/Guis/Stammdaten/Customer/CustomersView.xaml
+++ b/Trunk/WpfApplication1/Guis/Stammdaten/Customer/CustomersView.xaml
@@ -6,8 +6,7 @@
             xmlns:vw="clr-namespace:FrontEnd.Guis.Stammdaten.Customer"
   HorizontalAlignment="Center"
   VerticalAlignment="Center"  
-  Width="400"
-  >
+  Width="400">
     <Grid Margin="4">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
