--- a/Trunk/WpfApplication1/MainWindowResources.xaml
+++ b/Trunk/WpfApplication1/MainWindowResources.xaml
@@ -9,6 +9,8 @@
                     xmlns:loginVm="clr-namespace:FrontEnd.ViewModel.Security"
                     xmlns:loginGui="clr-namespace:FrontEnd.Guis.Security"
                     xmlns:Product="clr-namespace:WpfApplication1.Guis.Stammdaten.Product"
+                    xmlns:Supplier="clr-namespace:WpfApplication1.ViewModel.Stammdaten.Supplier"
+                    xmlns:SupplierGui="clr-namespace:WpfApplication1.Guis.Stammdaten.Supplier"
                     x:Class="FrontEnd.c__projekte_projectmerp_wpfapplication1_mainwindowresources_xaml">
     
     
@@ -30,6 +32,10 @@
     <DataTemplate DataType="{x:Type vmProduct:ProductViewModel}">
         <Product:ProductsView />
     </DataTemplate>
+    <DataTemplate DataType="{x:Type Supplier:SupplierViewModel}">
+        <SupplierGui:SuppliersView />
+    </DataTemplate>
+    
 <!---->
    
     <!-- Template für die Befehle / Hyperlinks im Navigationsbereich -->
