--- a/Trunk/WpfApplication1/Guis/BusinessProcesses/Sales/Order/OrdersView.xaml
+++ b/Trunk/WpfApplication1/Guis/BusinessProcesses/Sales/Order/OrdersView.xaml
@@ -6,7 +6,7 @@
             xmlns:vw="clr-namespace:FrontEnd.Guis.Stammdaten.Customer"
   HorizontalAlignment="Center"
   VerticalAlignment="Center"  
-  Width="400">
+  Width="619" mc:Ignorable="d" d:DesignHeight="504" Height="504">
     <Grid Margin="4">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
@@ -22,8 +22,9 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="30" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="30" />
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="174" />
+            <RowDefinition Height="34" />
+            <RowDefinition Height="128*" />
         </Grid.RowDefinitions>
 
         <Grid.Resources>
@@ -41,84 +42,131 @@
         <!-- CUSTOMER TYPE -->
         <Label 
       Grid.Row="0" Grid.Column="0" 
-      Content="Customer _type:" 
+      Content="Customer:" 
       HorizontalAlignment="Right"
-      Target="{Binding ElementName=customerTypeCmb}" 
+      Target="{Binding ElementName=customerTxt}" 
       />
-        <ComboBox 
-      x:Name="customerTypeCmb"
+        <TextBox 
+      x:Name="customerTxt"
       Grid.Row="0" Grid.Column="2" 
-      ItemsSource="{Binding Path=CustomerTypeOptions, Mode=OneTime}"
-      SelectedItem="{Binding Path=CustomerType, ValidatesOnDataErrors=True}"
+      Text="{Binding Path=customerTxt, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" 
       Validation.ErrorTemplate="{x:Null}"
       />
         <ContentPresenter 
       Grid.Row="1" Grid.Column="2"
-      Content="{Binding ElementName=customerTypeCmb, Path=(Validation.Errors).CurrentItem}"
+      Content="{Binding ElementName=customerTxt, Path=(Validation.Errors).CurrentItem}"
       />
 
         <!-- FIRST NAME-->
         <Label 
       Grid.Row="2" Grid.Column="0" 
-      Content="First _name:" 
+      Content="Ordernumber:" 
       HorizontalAlignment="Right"
-      Target="{Binding ElementName=firstNameTxt}"
+      Target="{Binding ElementName=orderNumberTxt}"
       />
         <TextBox 
-      x:Name="firstNameTxt"
+      x:Name="orderNumberTxt"
       Grid.Row="2" Grid.Column="2" 
-      Text="{Binding Path=FirstName, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" 
+      Text="{Binding Path=OrderNumber, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" 
       Validation.ErrorTemplate="{x:Null}"
       />
         <ContentPresenter 
       Grid.Row="3" Grid.Column="2"
-      Content="{Binding ElementName=firstNameTxt, Path=(Validation.Errors).CurrentItem}"
+      Content="{Binding ElementName=orderNumberTxt, Path=(Validation.Errors).CurrentItem}"
       />
 
         <!-- LAST NAME-->
         <Label 
       Grid.Row="4" Grid.Column="0" 
-      Content="_Last name:" 
+      Content="Creation date:" 
       HorizontalAlignment="Right"
-      Target="{Binding ElementName=lastNameTxt}" 
+      Target="{Binding ElementName=creaDate}" 
       />
-        <TextBox 
-      x:Name="lastNameTxt"
-      Grid.Row="4" Grid.Column="2" 
-      Text="{Binding Path=LastName, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
-      Validation.ErrorTemplate="{x:Null}"
-      />
+
+      <DatePicker 
+      Grid.Column="2"
+      Grid.Row="4"
+      HorizontalAlignment="Left"
+      Name="creaDate"
+      VerticalAlignment="Top" Height="23" Width="174" />
+
         <ContentPresenter 
       Grid.Row="5" Grid.Column="2"
-      Content="{Binding ElementName=lastNameTxt, Path=(Validation.Errors).CurrentItem}"
+      Content="{Binding ElementName=creaDate, Path=(Validation.Errors).CurrentItem}"
       />
 
         <!-- E-MAIL-->
-        <Label 
-      Grid.Row="6" Grid.Column="0" 
-      Content="E-_mail:" 
-      HorizontalAlignment="Right"
-      Target="{Binding ElementName=emailTxt}" 
-      />
+        <DataGrid 
+            AutoGenerateColumns="False" 
+            Grid.Row="7" Height="174" 
+            HorizontalAlignment="Left" Name="positionsGrid" 
+            VerticalAlignment="Top" 
+            Width="609" Grid.ColumnSpan="3" />
+        <Label Content="Product:" 
+               Grid.Row="9" 
+               Height="25" 
+               HorizontalAlignment="Right" 
+               Margin="0,0,0,103" 
+               Name="productLbl" 
+               VerticalAlignment="Bottom" 
+               Width="51" />
+        <ComboBox 
+            Grid.Column="2" 
+            Grid.Row="9" 
+            HorizontalAlignment="Left" 
+            Margin="1,0,0,103" 
+            Name="productCmb"
+            VerticalAlignment="Bottom" Width="225" Height="21" />
+        <Label Content="Amount:"
+               Grid.Row="9" Height="28"
+               HorizontalAlignment="Left"
+               Margin="28,33,0,0"
+               Name="amountLbl"
+               VerticalAlignment="Top"
+               Width="51" />
         <TextBox 
-      x:Name="emailTxt"
-      Grid.Row="6" Grid.Column="2" 
-      Text="{Binding Path=Email, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
-      Validation.ErrorTemplate="{x:Null}"
-      />
-        <ContentPresenter 
-      Grid.Row="7" Grid.Column="2"
-      Content="{Binding ElementName=emailTxt, Path=(Validation.Errors).CurrentItem}"
-      />
-
-        <!-- SAVE BUTTON -->
-      <Button 
-      Grid.Row="8" Grid.Column="2"
-      Command="{Binding Path=SaveCommand}"
-      Content="_Save"
-      HorizontalAlignment="Right"
-      Margin="4,2" 
-      MinWidth="60" 
-      />
+            Grid.Row="9"
+            HorizontalAlignment="Left" Name="amountTxt" 
+            VerticalAlignment="Top"
+            Grid.Column="2" Width="62" 
+            Text="{Binding Path=Amount, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" Height="23" Margin="1,35,0,0" />
+        <Button 
+          Grid.Row="9" Grid.Column="2"
+          Command="{Binding Path=SaveCommand}"
+          Content="_Add"
+          HorizontalAlignment="Right"
+          Margin="0,0,448,1" 
+          MinWidth="60" Height="30" VerticalAlignment="Bottom" Width="77" />
+        <Button 
+          Grid.Row="9" Grid.Column="2"
+          Command="{Binding Path=SaveCommand}"
+          Content="_Create Order"
+          HorizontalAlignment="Right"
+          Margin="0,0,1,0" 
+          MinWidth="60" Height="31" VerticalAlignment="Bottom" Width="80" />
+        <Label Content="Price:"
+               Grid.Row="9"
+               Height="28"
+               HorizontalAlignment="Left"
+               Margin="43,57,0,0"
+               Name="lblPrice"
+               VerticalAlignment="Top"
+               Width="36" />
+        <TextBox 
+            Grid.Column="2"
+            Grid.Row="9"
+            Height="23"
+            HorizontalAlignment="Left"
+            Margin="1,59,0,0"
+            Name="priceTxt"
+            VerticalAlignment="Top"
+            Width="101" />
+        <Label Content="Add Positions:" 
+               Grid.Row="8" Height="28"
+               HorizontalAlignment="Left"
+               Margin="0,6,0,0" 
+               Name="addPosLbl"
+               VerticalAlignment="Top"
+               Width="79" />
     </Grid>
 </UserControl>
